[metadata]
name = aws-dashboard
summary = AWS Dashboard For Hybrid Cloud
description-file =
    README.rst
author = dennis.hong
author-email = dennis.hong@kakaocorp.com
home-page = https://github.com/dennis-hong/horizon-plugin-starter-kit
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    aws_dashboard
